Messy, but it now works

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 <body>
     <div class="body text-center">
         <h1 class="alert alert-success">Let's play darts!</h1>
-            <div class="playernames"></div>
+            <table class="playernames text-center">
+                
+            </table>
+            <div id="button_list" class="score_updates">
+                    
+            </div>
             <div class="setup">
                 <h3 class="how_many">How many players are playing?</h3>
                 <div class="set_players">
