--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<!--
+    Author: Robbie C
+    Date: 08/06/2020
+    Description:
+    A darts application that has the functionality to keep score, decide how many
+    players are playing and a few averages. It is a work in progress but i expect
+    that it will be buggy with the current version. Send a message to me at:
+    robbielcampbell31@gmail.com for any queries.
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,20 +17,25 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
 <body>
+    <!-- Pseudo nav bar and title of page-->
     <div class="body text-center">
         <h1 class="alert alert-success">Let's play darts!</h1>
+        <!-- This table is filled once players have been added by javascript -->
             <table class="playernames text-center">
                 
             </table>
+            <!-- This is where th score input data is kept -->
             <div id="button_list" class="score_updates">
                     
             </div>
+            <!-- The div where number of players and player names are included -->
             <div class="setup">
                 <h3 class="how_many">How many players are playing?</h3>
                 <div class="set_players">
                     <input type="text" id="number_of_players" placeholder="How many players">
                     <button class="enter_number btn btn-primary">Enter players</button>
                 </div>
+                <!-- Put in place of the select player number after selecting player numbers -->
                 <div class="names">
                     <input type="text" class="player_name" placeholder="enter player name">
                     <button class="enter_player btn btn-primary">Enter player name</button>
