Quality of life changes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <!-- Pseudo nav bar and title of page-->
     <div class="contain text-center">
-        <h1 class="alert alert-success">Let's play darts!</h1>
+        <h1 class="alert">Let's play darts!</h1>
 
         <!-- This table is filled once players have been added by javascript -->
             <table class="playernames text-center">
@@ -29,10 +29,10 @@
             <!-- This is where the winners name is placed -->
             <h1 class="winner"></h1>
             <!-- start a new game option -->
-            <button id="restart">Play again?</button>
+            <button class="restart btn btn-secondary">Play again?</button>
             
             <!-- This is where the score input data is kept -->
-            <div id="button_list" class="score_updates">
+            <div id="button_list" class="score_updates text-right">
                     
             </div>
             <!-- The div where number of players and player names are included -->
