software more robust

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <div class="contain text-center">
         <h1 class="alert">Let's play darts!</h1>
 
+        <h3 class="errors alert-danger"></h3>
         <!-- This table is filled once players have been added by javascript -->
             <table class="playernames text-center">
                 
