Key listeners on all input boxes

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                 </div>
                 <div class="dart_out">
                     <select name="darts_out" id="darts">
+                        <option value="default" selected="selected">Select a value</option>
                         <option value="1">1</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
